--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 }
 p{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 26px;
 }
 
 span {
@@ -54,4 +54,37 @@ span {
     50% {
         font: 40px bold;
     }
+}
+
+li{
+    color: blue !important;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 28px;
+    text-shadow: 2px 2px 5px rgb(0, 255, 47);
+    
+}
+
+
+
+li:nth-child(2){
+    color:hotpink !important;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 28px;
+    text-shadow: 2px 2px 5px rgb(0, 255, 47);
+    animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  50% {text-shadow: 6px 6px 10px blue;}
+}
+p{
+    color:darkorchid !important;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 26px;
+}
+
+p:nth-child(3){
+    color:brown !important;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 28px;
 }
