--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,14 @@ body {
     align-items: center;
     flex-direction: column;
 }
-p{
+
+p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 26px;
 }
 
 span {
-    color:azure !important;
+    color: azure !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,15 +26,39 @@ span {
     position: relative;
     animation-name: movi;
     animation-duration: 4s;
-  }
-  
-  @keyframes movi {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:200px; top:0px;}
-    50%  {background-color:blue; left:200px; top:200px;}
-    75%  {background-color:green; left:0px; top:200px;}
-    100% {background-color:red; left:0px; top:0px;}
-  }
+}
+
+@keyframes movi {
+    0% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
+
+    25% {
+        background-color: yellow;
+        left: 200px;
+        top: 0px;
+    }
+
+    50% {
+        background-color: blue;
+        left: 200px;
+        top: 200px;
+    }
+
+    75% {
+        background-color: green;
+        left: 0px;
+        top: 200px;
+    }
+
+    100% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
+}
 
 #elemento2 {
     border: 1px solid black;
@@ -42,13 +67,11 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
-    color:aqua !important;
+    color: aqua !important;
     width: 300px;
     height: 100px;
     animation: mymove 5s infinite;
 }
-
-
 
 @keyframes mymove {
     50% {
@@ -56,35 +79,36 @@ span {
     }
 }
 
-li{
+li {
     color: blue !important;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 28px;
     text-shadow: 2px 2px 5px rgb(0, 255, 47);
-    
+
 }
 
-
-
-li:nth-child(2){
-    color:hotpink !important;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+li:nth-child(2) {
+    color: hotpink !important;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 28px;
     text-shadow: 2px 2px 5px rgb(0, 255, 47);
     animation: mymove 5s infinite;
 }
 
 @keyframes mymove {
-  50% {text-shadow: 6px 6px 10px blue;}
+    50% {
+        text-shadow: 6px 6px 10px blue;
+    }
 }
-p{
-    color:darkorchid !important;
+
+p {
+    color: darkorchid !important;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 26px;
 }
 
-p:nth-child(3){
-    color:brown !important;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+p:nth-child(3) {
+    color: brown !important;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 28px;
 }
